--- a/substrate-node-template/Cargo.toml
+++ b/substrate-node-template/Cargo.toml
@@ -1,9 +1,9 @@
-[profile.release]
-panic = 'unwind'
-
 [workspace]
 members = [
     'node',
-    'pallets/*',
+    'pallets/template',
+    'pallets/kitties',
     'runtime',
 ]
+[profile.release]
+panic = 'unwind'
